--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8081
-backend.url=http://localhost:8080
+#backend.url=http://localhost:8080
+backend.url=https://momentumbackend.herokuapp.com
 fapi.url=http://localhost:8081
-upload.path=D:/Java/Netcracker/NC_EDU_SE1_SHALKOVSKIY_PAVEL/fapi/src/main/resources/static/users
+upload.path=${user.dir}/src/main/resources/static/users
+
